# Arm-Trajectory-Controller

./: .gitignore  README.md
arm_description/: CMakeLists.txt
arm_description/launch/: arm.launch.py  rviz_only.launch.py
arm_description/model/: arm.urdf
arm_description/model/temp/: arm.urdf.xacro
arm_description/model/temp/robot_arm/meshes/: base_link.STL  link1.STL  link2.STL
arm_description/model/temp/robot_arm/urdf/: robot_arm.csv  robot_arm.urdf
arm_description/rviz/: arm_description.rviz
arm_interface/: CMakeLists.txt  package.xml
arm_interface/launch/: interface.launch.py  serial.launch.py
arm_interface/src/: interface.cpp  interface_node.cpp
arm_interface/src/serial_port/: serial_port.cpp  serial_port.hpp  serial_port_node.cpp
arm_link/scripts/: serial_comm.py
arm_simulation/: CMakeLists.txt
